Update 01. Randomised Algorithms.md

--- a/notes/Evolutionary-computation/01. Randomised Algorithms.md
+++ b/notes/Evolutionary-computation/01. Randomised Algorithms.md
@@ -1,10 +1,8 @@
 # Evolutionary Computation - Randomised Algorithms
-
-<img src="https://www.tutorialspoint.com/data_structures_algorithms/images/randomized_algorithms.jpg" alt="Randomised" width="800">
-
 ---
 
 ## 1. Motivating Problems
+<img src="https://images.squarespace-cdn.com/content/v1/663792287f6076006c274f8d/1719242325921-JHB8BLZR39DSXMRG3RO3/Nuts-and-bolts.jpg" alt="Nuts" width="400">
 
 ### Problem 1: Matching One Bolt to \( n \) Nuts
 - **Real-world analogy**: Given a bolt and a collection of \( n \) nuts of different sizes, find the matching nut.
@@ -33,10 +31,7 @@
 
 ## 2. Randomised Algorithms
 
-### Definition
-> "For many problems, a randomised algorithm is the simplest, the fastest, or both." – Prabhakar Raghavan
-
-### Categories of Algorithms
+### Categories of Algorithms by design
 1. **Divide and Conquer** (e.g., Quicksort)
 2. **Dynamic Programming**
 3. **Mathematical Programming** (e.g., Linear Programming)
@@ -44,23 +39,32 @@
 5. **Brute Force**
    - Exhaustive search
    - Improved brute force (e.g., branch and bound)
-6. **Heuristic Algorithms**
+6. **Heuristic Algorithms** -Our interest today
    - Local search (e.g., greedy search)
    - Randomised algorithms
 
 ### Heuristic Algorithms
-- **Definition**: Approximate solutions in a reasonable time frame.
-- **Trade-offs**: Speed vs. accuracy/completeness.
-- **Use cases**:
-  - Problems difficult for brute force methods.
-  - Deterministic (e.g., local search) vs. randomised methods.
+- **Defintion**: A (usually simple) algorithm that produces a **good enough** solution for a problem in a **reasonable time frame**.
+- The word "heuristic" means "to find" or "to discover."
+- **Solutions are usually non-optimal but satisfactory:**
+  - **Faster**: An alternative to brute force (exhaustive) search.
+  - **Trade-offs**: Sacrifices optimality, completeness, accuracy, or precision for speed.
+- **Used for problems difficult for brute force algorithms.**
+- **Two main types:**
+  - **Deterministic Heuristic Algorithms** (e.g., local search, greedy algorithms)
+  - **Randomised Heuristic Algorithms** (e.g., evolutionary algorithms, simulated annealing)
 
 ### Randomised Algorithms
-- **Definition**: An algorithm that makes random choices during execution.
+- **Definition**: A heuristic algorithm that makes random choices during execution.
 - **Characteristics**:
   - Uses a source of randomness.
   - Output or runtime can vary for the same input.
   - Goal: Ensure likely good performance on every input.
+
+<img src="https://www.tutorialspoint.com/data_structures_algorithms/images/randomized_algorithms.jpg" alt="Randomised" width="400">
+
+> "For many problems, a randomised algorithm is the simplest, the fastest, or both." – Prabhakar Raghavan
+
 
 ### Randomised vs. Deterministic Algorithms
 | Type | Input | Output |
@@ -105,6 +109,26 @@ until (a == x) or (i == k)
 | **Las Vegas** | Always correct | Variable |
 | **Monte Carlo** | Fixed steps | Possible errors |
 
+---
+
+### Why Use Randomised Algorithms?
+
+#### Problem 1: Matching 1 bolt to \( n \) Nuts
+The element search problem is simple but:
+
+- **Deterministic Sequential (Linear) Search Algorithm**:
+  - Average and Worst-case runtime complexity: \( O(n) \)
+
+- **Las Vegas Algorithm**:
+  - Average runtime complexity depends on the input (e.g., the array and the element you want to find \( x \)).
+  - Worst runtime complexity is unbounded (could get very unlucky).
+
+- **Monte Carlo Algorithm**:
+  - Fixed worst-case runtime complexity: \( O(1) \).
+  - However, has a probability of error (may not find the element).
+
+---
+
 ### Problem 2: Nuts and Bolts Problem
 - **Brute-force solution**: Compare each nut to all bolts (\( O(n^2) \)).
 - **Optimized approach**: Use a **randomised quicksort** variant:
@@ -112,7 +136,7 @@ until (a == x) or (i == k)
   2. Partition nuts based on the pivot bolt.
   3. Partition bolts based on the pivot nut.
   4. Recursively sort both groups.
-- **Complexity**: \( O(n \log n) \) on average.
+- **Complexity**: \( O(n log n) \) on average.
 
 ### Problem 3: Comparing Two Large Strings
 - **Challenge**: Limited communication bandwidth.
@@ -124,12 +148,17 @@ until (a == x) or (i == k)
 
 ---
 
-## 4. Conclusion
-- **Randomised algorithms** offer simplicity and efficiency.
-- **Trade-offs**:
-  - Monte Carlo: Bounded runtime, possible errors.
-  - Las Vegas: Always correct, unbounded runtime.
-- **Applications**:
-  - Sorting (Randomised Quicksort)
-  - Searching (Las Vegas, Monte Carlo)
-  - Optimization (Genetic Algorithms)
+
+## 4. Advantages/Disadvantages of Randomised Algorithms
+
+### Advantages:
+- **Simplicity**: Usually very easy to implement.
+- **Performance**: Usually produces (near-) optimum solutions with high probability.
+
+### Disadvantages:
+- **Possibility of incorrect results**:
+  - Solution: Repeat the algorithm to improve accuracy.
+- **Difficult to analyze**:
+  - Running time and probability of incorrect solutions can be hard to determine.
+- **Lack of true randomness**:
+  - Impossible to generate truly random numbers in practical applications.
