Update 02. Optimization Problems.md

--- a/notes/Evolutionary-computation/02. Optimization Problems.md
+++ b/notes/Evolutionary-computation/02. Optimization Problems.md
@@ -111,19 +111,15 @@ Optimization is the process of finding the best or most efficient solution to a 
 - **Linear programming** formulations are NP-hard.
 
 #### Heuristic Approaches:
-- **Randomized algorithms** (e.g., Monte Carlo, Las Vegas)
+- **Randomized algorithms** (e.g., Monte Carlo, Las Vegas) [Not good for solving the TSP]
 - **Local search algorithms**
 - **Simulated Annealing**
-
-#### Randomized Search Algorithms
-- **Las Vegas Algorithm**: Always produces correct solutions but may take variable time.
-- **Monte Carlo Algorithm**: Produces solutions quickly, but they may not be optimal.
-
-**Question**: How can we use these algorithms to generate random TSP solutions?
 
 ---
 
 ## 4. Local Search Algorithms
+<img src="https://www.cs.cmu.edu/~15281-s23/coursenotes/localsearch/images/utilitygraph.png" alt="Local Search" width="400">
+
 ### Concept
 - Start with an initial solution and incrementally improve it.
 - Move to a neighboring solution if it offers a better objective function value.
@@ -157,18 +153,42 @@ Output x
 - **Simple Hill Climbing**: Moves to the first better neighbor found.
 - **Steepest Ascent Hill Climbing**: Evaluates all neighbors and moves to the best one.
 
+```pseudo
+x0 := generate initial solution
+terminationflag := false
+x := x0
+while (terminationflag != true):
+    Modify the current solution to an *immediate* neighboring one v in A
+    If f(v) < f(x):
+        x := v
+    If termination criterion met:
+        terminationflag := true
+Output x
+```
+
 #### Hill Climbing for TSP
-- Immediate neighbors can be constructed by swapping city pairs.
-- **Example for 4 cities (A, B, C, D)**:
-  - Swap adjacent cities: A → B → C → D → A
-  - Swap non-adjacent cities: A → C → B → D → A
+
+In the Traveling Salesman Problem (TSP), the goal is to find a route (tour) that visits each city exactly once and returns to the starting point. For small numbers of cities, we can list all distinct tours and see how they relate.
+
+- **2–3 cities: only one solution**
+  - **2 cities**: A → B → A is the only valid tour, as reversing it (B → A → B) is identical.
+  - **3 cities**: A → B → C → A has only one unique cycle after accounting for rotations and reversals.
+
+- **4 cities: 3 distinct solutions**
+  - Once we factor out rotations and reversals, three unique Hamiltonian cycles remain.
+  - Example: A → B → C → D → A vs. A → B → D → C → A.
+
+- **Immediate neighbors in TSP**
+  - Two tours are "immediate neighbors" if they differ by swapping two edges.
+  - Example:  
+    - A → B → C → D → A  
+    - Swap (C, B) and (A, D) → A → B → D → C → A  
+  - This edge swap is a small but significant change used in heuristics like **2-opt**, which systematically swaps edges to improve the tour.
 
 ---
 
 ## 5. 2-Opt Algorithm
-
-### Introduction to the 2-Opt Algorithm
-The **2-Opt algorithm** is a simple but effective local search heuristic used primarily for solving the **Traveling Salesman Problem (TSP)**. It was first introduced by **Croes in 1958**.
+<img src="https://jmsallan.netlify.app/blog/2-opt-moves-in-the-travelling-salesman-problem/index_files/figure-html/unnamed-chunk-2-1.png" alt="2-Opt" width="400">
 
 ### Key Idea
 - Given a TSP route, we **swap two edges** to generate an alternative solution.
@@ -188,9 +208,17 @@ This results in an improved (or different) tour.
 
 ### Steps of 2-Opt Algorithm
 1. **Select two edges** in the current tour.
+<img src="../../images/1-select-edges.png" alt="select" width="200">
+
 2. **Remove the selected edges**, breaking the tour into two segments.
+<img src="../../images/2-remove-edges.png" alt="remove" width="200">
+
 3. **Reconnect the segments** using new edges to create a new valid tour.
+<img src="../../images/3-reconnect-edges.png" alt="reconnect" width="200">
+
 4. **Reverse the order of one segment**, if necessary, to optimize the route.
+<img src="../../images/4-reverse-paths.png" alt="reverse" width="200">
+
 
 ### Pseudocode Implementation
 ```python
@@ -216,6 +244,7 @@ This results in an improved route.
 ---
 
 ## 6. Stochastic Local Search: Basic Ideas
+<img src="https://substack-post-media.s3.amazonaws.com/public/images/1da810ce-5d43-49e4-91b5-e00e50a1e20c_736x414.png" alt="Landscape" width="400">
 
 ### Fitness Landscape
 A **fitness landscape** represents the relationship between different solutions and their objective function values. 
@@ -226,8 +255,8 @@ A **fitness landscape** represents the relationship between different solutions 
 ### Randomized Search vs Local Search
 | Approach           | Strengths | Weaknesses |
 |------------------|-----------|------------|
-| **Randomized Search** | Good at exploring unknown regions | Poor at refining good solutions |
-| **Local Search** | Good at refining solutions | Stuck in local optima |
+| **Randomized Search** | Good at exploring unknown regions (Good Exploration) | Poor at refining good solutions (Poor Exploitation) |
+| **Local Search** | Good at refining solutions (Good Exploitation) | Stuck in local optima (Poor Exploration) |
 
 ### Stochastic Local Search: Main Idea
 To **escape local optima**, stochastic local search introduces randomness in two ways:
@@ -237,6 +266,7 @@ To **escape local optima**, stochastic local search introduces randomness in two
 ---
 
 ## 7. Local Search with Random Restart
+<img src="https://rajagopalvenkat.com/teaching/resources/AI/img/grad-graph.png" alt="Random Restart" width="400">
 
 ### Hill Climbing with Random Restart
 Instead of being stuck in a local optimum, we restart from a new random point.
@@ -258,6 +288,7 @@ return best_solution
 ---
 
 ## 8. Simulated Annealing
+<img src="https://ars.els-cdn.com/content/image/3-s2.0-B9780128150108000028-f02-14-9780128150108.jpg" alt="Simulated Annealing" width="400">
 
 ### Introduction
 **Simulated Annealing (SA)** is an optimization algorithm inspired by **metallurgy annealing**:
@@ -267,17 +298,22 @@ return best_solution
 
 ### Simulated Annealing Algorithm
 ```python
-x = initial_solution()
-e = objective_function(x)
-T = initial_temperature()
-while not terminated:
-    x_new = neighbor(x)
+x = initial_solution; e = objective_function(x) //Initial solution and objective function
+x_best = x; e_best = e // Initial best soltuion
+k = 0 //Count evaluations
+
+while k < max_iterations:
+    T = temperature(T)  # Update temperature
+    x_new = neighbor(x)  # Pick a neighbor
     e_new = objective_function(x_new)
-    if acceptance_probability(e, e_new, T) > random(0,1):
-        x = x_new
-        e = e_new
-    T = reduce_temperature(T)
-return best_solution
+
+    if acceptance_probability(e, e_new, T) > random(0, 1): # Should we accept it?
+        x, e = x_new, e_new  # Accept new state
+
+    if e_new < e_best: # is this the new best?
+        x_best, e_best = x_new, e_new  # Update best solution
+    k += 1
+return x_best  # Return best solution found
 ```
 
 ### Key Idea
