Update 02. Optimization Problems.md

--- a/notes/Evolutionary-computation/02. Optimization Problems.md
+++ b/notes/Evolutionary-computation/02. Optimization Problems.md
@@ -322,7 +322,8 @@ return x_best  # Return best solution found
   ```
   P = exp((e - e_new) / T)
   ```
-- As **temperature decreases**, fewer bad moves are accepted.
+- The worse the new neighbor is, the less likely it is to be accepted.
+- As **temperature decreases**, fewer bad moves are accepted (Exploration at the start and Exploitation at the end).
 
 ### What Happens When T Reaches 0?
 - The algorithm behaves like greedy hill climbing (only accepting better solutions).
